--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
+                    <th scope="col">S.No.</th>
                     <th scope="col">Book Name</th>
                     <th scope="col">Author</th>
                     <th scope="col">Type</th>
