delete functionality added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <th scope="col">Book Name</th>
                     <th scope="col">Author</th>
                     <th scope="col">Type</th>
+                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody id="tableBody">
